Close Head context before dealing with tags that belong in body/frameset. b=187790, r=heikki, sr=jst